# medlog

./: .gitignore  Cargo.toml  README.md  pyproject.toml
medlog/: __main__.py  entry.py
src/: main.rs
