[tool.poetry]
name = "medlog"
version = "0.1.0"
description = "A minimal logging tool for medication doses"
authors = ["Floozutter <floozutter@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
